# ASD

./: .gitignore  README.md
data/: MET_ИПС_2023.TXT  Адрес google-диска.txt
data/Занятия/Занятие 1/: Типы данных.ppt
data/Занятия/Занятие 12/: АВЛ и красно-черные деревья.pptx
data/Занятия/Занятие 16/: Внешние сортировки, сложность 2023.ppt
data/Занятия/Занятие 2/: Линейные списки.ppt
data/Занятия/Занятие 3/: Стеки и очереди.ppt
lw1/: postfix.c  postfix_push_var.c  start.c  test_in.txt  test_in_answer.txt  tz.txt  without_var.cpp
lw2/: in3.txt  in4.txt  main.c  network.c  out.txt  psevdocode-graph.txt  psevdocode-tree.txt  psevdocode.txt  star.c
lw2/test/: INPUT1.TXT  input10.txt  input11.txt  input12.txt  input13.txt  input14.txt  input15.txt  input16.txt  input17.txt  input18.txt  input19.txt  input2.txt  input20.txt  input3.txt  input5.txt  input8.txt  input9.txt  output1.txt  output10.txt  output11.txt  output12.txt  output13.txt  output14.txt  output15.txt  output16.txt  output17.txt  output18.txt  output19.txt  output20.txt  output5.txt  output8.txt  output9.txt
lw3/: graph.c  graphOld.c  in.txt  in2.txt  out.txt
lw4/: CMakeLists.txt  main.cpp
lw4/libs/: b_tree.cpp  hash.cpp
lw4/libs/headers/: bPlusTree.hpp  bTree.hpp  b_tree.hpp  fileHandler.h  hash.hpp  node.h  printHandler.h  record.h  recordTypes.h  sha512.hh  store.h
lw4/libs/headers/node/: node.h  nodeFS.h  nodeRAM.h
lw4/libs/headers/record/: record.h  recordBirth.h  recordPhone.h
lw4/old/: CMakeLists_OLD.txt  mainOld.cpp
lw4/plans/: psevdoCode.txt  uml.txt
(+3 files in other folders)
